--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "clsx": "^1.1.1",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-particles-js": "^3.6.0"
   },
   "browserslist": {
     "production": [
