--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@docusaurus/preset-classic": "2.0.0-beta.18",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
+    "hast-util-is-element": "1.1.0",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-particles-js": "^3.6.0"
+    "react-particles-js": "^3.6.0",
+    "rehype-katex": "5",
+    "remark-math": "3"
   },
   "browserslist": {
     "production": [
