--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@docusaurus/theme-search-algolia": "^2.3.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
+    "docusaurus-live-brython": "^0.0.1-beta.6.12",
     "hast-util-is-element": "1.1.0",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
