--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.6.0",
+    "react-player": "^2.12.0",
     "rehype-katex": "5",
     "remark-math": "3"
   },
